--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,19 @@
 .App {
   text-align: center;
+  /* border: 2px solid red; */
+  /* height: 200vh; */
+  /* background-color: #282162; */
+  /* background-image: linear-gradient(
+    40deg,
+    rgba(175, 219, 228, 0.8),
+    rgba(48, 86, 96, 0.8) 15%,
+    rgba(137, 70, 223, 0.8)
+  ); */
+  background-color: #121543;
+  background-image: linear-gradient(40deg,rgba(26,214,255,.8),#121543 15%,rgba(137,70,223,.8));
+  background-size: cover;
+  font-family: Poppins, sans-serif;
+  
 }
 
 .App-logo {
@@ -35,4 +49,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+html {
+  font-family: Poppins, sans-serif;
+  line-height: 1.5;
+  /* font-size: 1px; */
 }
