--- a/src/components/BlockCred/BlockCred.css
+++ b/src/components/BlockCred/BlockCred.css
@@ -34,9 +34,28 @@
     margin: auto;
     margin-top: 50px;
     /* color: #00e7e7; */
-    text-align: center;
+    /* position: absolute; */
+    text-align:inherit ;
+    animation: fadeInAnimation ease-in-out 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    font-weight: 500;
+    font-size: 20px;
 
 }
+
+@keyframes fadeInAnimation {
+    0% {
+        margin-top: -10%;
+        visibility: hidden;
+        /* opacity: ; */
+    }
+    100% {
+        margin-top: 5%;
+        visibility: inherit;
+    }
+}
+
 
 
 .solution_content{
@@ -45,12 +64,12 @@
 
     color: white; 
     width: 200vh;
-    margin: 100px auto 0px auto;
+    margin: 80px auto 0px auto;
     /* margin-bottom: 10px; */
     /* margin-bottom: 201px; */
 
     padding: 10px 20px  70px 20px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 10px 14px 16px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 10px -13px 15px;
+    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 10px 14px 16px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 10px -13px 15px; */
     border-radius:15px ;   
     /* background-image: linear-gradient(45deg,#da45ff,#00e7e7); */
     
@@ -68,7 +87,7 @@
 
 
 .solution_info{
-    border: 2px solid #00e7e7;
+    /* border: 2px solid #00e7e7; */
     /* border-image: linear-gradient(45deg,#da45ff,#00e7e7); */
 
     border-top-left-radius: 20px;
@@ -78,20 +97,147 @@
     margin-top: 40px;
     padding-bottom: 20px;
     flex-wrap: wrap;
-    overflow: scroll;
+    overflow: hidden;
     overflow-x: hidden;
-    height: 300px;
+    /* height: 300px; */
     padding: 10px 10px;
 
 
 
 }
 
-.solution_content .solution_info img{
+
+
+.nft_information{
+    /* border: 2px solid white; */
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.nft_information div{
+    flex: 50%;
+}
+
+.nft_information .nft_image_section{
+    /* border: 2px solid red; */
+    height: 250px;
+    width: 400px;
+}
+
+.nft_image_section img{
+    height: 100%;
+}
+.nft_content_section{
+    margin-right: 10%;
+}
+.nft_information .nft_content_section p{
+    /* border: 2px solid white; */
+    color: whitesmoke;
+    text-align: left;
+
+}
+
+.card_info{
+    /* border: 1px solid white; */
+    width: 305px;
+    border-radius:12px ;
+    margin-top: 40px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.card_info .image_info{
     height: 250px;
     width: 300px;
-    border-radius: 15px;
-    margin: 40px 20px 40px 20px;
+    margin: auto;
+}
 
+.image_info img{
+    height: 100%;
+    width: 100%;
+    border-top-left-radius:12px ;
+    border-top-right-radius:12px ;
+
+
+}
+
+
+
+
+.image_content p{
+    text-align: left;
+    padding: 10px 10px;
     
+
+}
+
+
+.image_content h6{
+    /* border: 2px solid ; */
+    margin-top: 10px;
+    text-align: left;
+    padding: 10px 10px;
+    margin-bottom: -10px;
+
+
+}
+
+
+.benefit_section{
+    /* border: 2px solid white; */
+    margin-top: 100px;
+
+}
+
+.benefit_section .heading h2{
+    letter-spacing: 1.6px;
+    line-height: 60px;
+    font-size: 40px;
+}
+
+.benefit_images{
+    margin-top: 30px;
+    padding: 10px 10px;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.small_container{
+    /* border: 2px dashed white; */
+    height: 180px;
+    width: 180px;
+    border-radius:18px ;
+
+    box-shadow: white 0px 2px 5px;
+    /* box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset; */
+}
+
+.small_container img{
+    /* margin: auto auto; */
+    border-radius:18px ;
+
+    margin-top: 15px;
+    height: 100px;
+    width: 100px;
+}
+.small_container p{
+    margin-top: 10px;
+    font-weight: 600;
+    color: white;
+    letter-spacing: 3px;
+
+}
+
+.back{
+    background-color: #5b3e63;
+    height: 200px;
+    width: 950px;
+    position: absolute;
+    top: -25px;
+    z-index: -1;
+    opacity: 0.5;
+    left: -25px;
+
+    border-radius: 20px;
 }
