--- a/src/Styles/create.css
+++ b/src/Styles/create.css
@@ -1,6 +1,6 @@
 .create_box{
     /* border: 2px solid red; */
-    /* height: 85vh; */
+    /* height: 100%; */
     margin: 40px 2px 0px 2px;
 
 
@@ -10,8 +10,9 @@
     /* border: 2px solid red; */
     width: 150vh;
     /* margin: auto; */
-    margin: -25px auto;
+    margin:  auto;
 
+    height: 170vh;
     /* margin-bottom: 20px; */
     display: flex;
     flex-direction: column;
@@ -95,16 +96,7 @@
     background-color: rgba(0, 0, 0, 0.15);
 }
 
-
-.euUQqP {
-    -webkit-box-align: center;
-    align-items: center;
-}
-
-.iVtKaT {
-    -webkit-box-pack: center;
-    justify-content: center;
-}
+ 
 
 
 .nameField  , .artistnameField{
