--- a/src/Styles/create.css
+++ b/src/Styles/create.css
@@ -1,4 +1,15 @@
+.createbox {
+  display: flex;
+  justify-content: center;
+}
 
+.createform {
+  max-width: 720px;
+  /* padding: 20px; */
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  color: white;
 }
 
 .sZAwe {
@@ -37,8 +48,6 @@
   background-color: rgba(0, 0, 0, 0.15);
 }
 
-
-
 .nameField,
 .artistnameField {
   /* border: 2px solid red; */
@@ -49,13 +58,15 @@
   align-items: flex-start;
   /* margin: auto; */
   /* font-size: 20px; */
-  width: 100vh;
+  min-width: 320px;
+  max-width: 500px;
   margin-top: 20px;
   font-family: Poppins, sans-serif;
 }
 
 .nameField input {
-  width: 500px;
+  min-width: 320px;
+  max-width: 500px;
   margin: auto;
   padding: 10px;
   border-radius: 11px;
@@ -65,7 +76,8 @@
 }
 
 .artistnameField input {
-  width: 500px;
+  min-width: 320px;
+  max-width: 500px;
   margin: auto;
   padding: 10px;
   border-radius: 11px;
@@ -87,7 +99,8 @@
 }
 
 .description_box textarea {
-  width: 500px;
+  max-width: 500px;
+  min-width: 320px;
   border-radius: 11px;
   padding: 10px;
   margin-top: 10px;
@@ -106,7 +119,8 @@
 }
 
 .specification_box textarea {
-  width: 500px;
+  min-width: 300px;
+  max-width: 500px;
   border-radius: 11px;
   padding: 10px;
   margin-top: 10px;
@@ -136,7 +150,8 @@
 }
 .Neon-input-dragDrop {
   display: block;
-  width: 343px;
+  min-width: 300px;
+  max-width: 500px;
   margin: 10 auto 25px auto;
   /* height: 200px; */
   padding: 25px;
@@ -198,6 +213,7 @@
   padding: 5px 10px;
   width: 200px;
   margin: 20px 0px 0px 20px;
+  border: 1px solid black;
   border-radius: 20px;
   cursor: pointer;
   padding: 10px;
@@ -208,16 +224,15 @@
   font-size: 18px;
 }
 
+.button button:hover {
+  border: 1px solid white;
+  transform: scale(1.1);
+  animation: scaleup 0.3s;
+}
+
 .form form div p {
   font-size: 12px;
   color: red;
-}
-
-#artist,
-#asset,
-#desc,
-#specs {
-  display: none;
 }
 
 .header {
