--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
 code {
@@ -12,6 +13,6 @@ code {
     monospace;
 }
 
-.nav button:focus {
-  border: 1px solid white;
+.status {
+  color: red;
 }
